--- a/note.html
+++ b/note.html
@@ -14,10 +14,12 @@
     <script src="src/note-model.js"></script>
     <script src="src/note-list-model.js"></script>
     <script src="src/note-list-view.js"></script>
+    <script src="src/note-controller.js"></script>
 
     <script src="spec/note-tests.js"></script>
     <script src="spec/note-list-tests.js"></script>
     <script src="spec/note-list-view-tests.js"></script>
+    <script src="spec/note-controller-tests.js"></script>
   
   
 </body>
