--- a/note.html
+++ b/note.html
@@ -7,6 +7,8 @@
   <title>Joes Test Framework</title>
 </head>
 <body>
+
+  <div id='app'></div>
     
     <script src="assert.js"></script>
     <script src="index.js"></script>
@@ -15,11 +17,13 @@
     <script src="src/note-list-model.js"></script>
     <script src="src/note-list-view.js"></script>
     <script src="src/note-controller.js"></script>
+    <script src="src/single-note-view.js"></script>
 
     <script src="spec/note-tests.js"></script>
     <script src="spec/note-list-tests.js"></script>
     <script src="spec/note-list-view-tests.js"></script>
     <script src="spec/note-controller-tests.js"></script>
+    <script src="spec/single-note-view-test.js"></script>
   
   
 </body>
